fix bug(BWC1274)text for the channel title is too low fix bug(BWC1275)sign in button on iPhone can be less wide and the font can be slightly larger

--- a/css/channels.css
+++ b/css/channels.css
@@ -198,13 +198,15 @@
 	.ChannelBanner
 	{
 	  height: 38px;
-	  font-size: 16px;
-	  line-height: 3em;
+	  font-size: 22px;
+	  line-height: 2.0em;
 	}
 	.sign-in-button
 	{
-	   font-size: 12px;
+	   font-size: 16px;
        height: 38px;
+	  
+	  
 	   
 	}
 
